<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd6ffdb"
    android:orientation="vertical"
    tools:context="com.example.ainemawe.bookapp.EnterBook">

    <TextView
        android:id="@+id/textAppView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_below="@+id/textAppView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:src="@drawable/ic_books"
        android:contentDescription="logo" />

    <!-- Removed editTexts

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_TitleMessage" />


    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_AuthorMessage" />
    -->


    <EditText
        android:id="@+id/editISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_ISBNMessage"
        android:inputType="number"
        android:textSize="24sp"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:text="@string/button_Search"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:layout_below="@+id/editISBN"
        android:layout_alignLeft="@+id/textAppView"
        android:layout_alignStart="@+id/textAppView" />
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:text="Cancel"
        android:textSize="@dimen/abc_text_size_body_2_material"
        android:layout_alignTop="@+id/buttonSearch"
        android:layout_alignRight="@+id/textAppView"
        android:layout_alignEnd="@+id/textAppView" />


</RelativeLayout>
